Comment out new tables to get it build again

--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -8,6 +8,9 @@
   <body>
     <script type="module" src="/src/index.ts"></script>
     <div>Counter: <span id="counter">0</span></div>
+    <div>Room: <span id="room_description"></span>
+        <button onClick="window.showDescription()">Show descrition</button>
+    </div>
     <button onclick="window.increment()">Increment</button>
   </body>
 </html>
