--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>a minimal MUD client</title>
+    <title>The Oruggin Trail</title>
+    <script src="https://cdn.jsdelivr.net/npm/jquery"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery.terminal/js/jquery.terminal.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery.terminal/css/jquery.terminal.min.css"/>
   </head>
   <body>
     <script type="module" src="/src/index.ts"></script>
-    <div>Counter: <span id="counter">0</span></div>
-    <div>Room: <span id="room_description"></span>
-        <button onClick="window.showDescription()">Show descrition</button>
-    </div>
-    <button onclick="window.increment()">Increment</button>
   </body>
 </html>
