--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -10,5 +10,6 @@
   </head>
   <body>
     <script type="module" src="/src/index.ts"></script>
+    <script type="module" src="/src/wallet.ts"></script>
   </body>
 </html>
