Add very mimimul lit element

--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -10,6 +10,10 @@
   </head>
   <body>
     <script type="module" src="/src/index.ts"></script>
-    <script type="module" src="/src/wallet.ts"></script>
+<!--    <script type="module" src="/src/wallet.ts"></script>-->
+<!--    <script type="module" src="/src/lit_term.ts"></script>-->
+<!--    <script type="module" src="/src/my_element.ts"></script>-->
+<!--  <lit-terminal></lit-terminal>-->
+  <my-element></my-element>
   </body>
 </html>
