Add in a text input function and lit element

--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -4,16 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Oruggin Trail</title>
-    <script src="https://cdn.jsdelivr.net/npm/jquery"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery.terminal/js/jquery.terminal.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery.terminal/css/jquery.terminal.min.css"/>
+    <script type="module" src="/src/index.ts"></script>
   </head>
   <body>
-    <script type="module" src="/src/index.ts"></script>
 <!--    <script type="module" src="/src/wallet.ts"></script>-->
-<!--    <script type="module" src="/src/lit_term.ts"></script>-->
-<!--    <script type="module" src="/src/my_element.ts"></script>-->
-<!--  <lit-terminal></lit-terminal>-->
-  <my-element></my-element>
+  <l-terminal></l-terminal>
   </body>
 </html>
