--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -7,6 +7,7 @@
     <script type="module" src="/src/index.ts"></script>
   </head>
   <body>
+  <l-wallet></l-wallet>
   <l-terminal></l-terminal>
   </body>
 </html>
