--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Oruggin Trail</title>
-    <script src="https://cdn.jsdelivr.net/npm/jquery"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery.terminal/js/jquery.terminal.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery.terminal/css/jquery.terminal.min.css"/>
-  </head>
-  <body>
-    <script type="module" src="/src/index.ts"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>The Oruggin Trail</title>
+		<script src="https://cdn.jsdelivr.net/npm/jquery"></script>
+		<script src="https://cdn.jsdelivr.net/npm/jquery.terminal/js/jquery.terminal.min.js"></script>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/jquery.terminal/css/jquery.terminal.min.css"
+		/>
+	</head>
+	<body>
+		<div id="gameview">
+			<div id="terminal"></div>
+			<div id="viewport"></div>
+		</div>
+		<style>
+			body {
+				margin: 0;
+			}
+			#gameview {
+				display: flex;
+				flex-direction: row;
+				overflow: hidden;
+			}
+			#terminal {
+				min-width: 450px;
+				height: 100vh;
+				overflow-y: auto;
+			}
+		</style>
+		<script type="module" src="/src/index.ts"></script>
+	</body>
 </html>
