--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -7,7 +7,10 @@
     <script type="module" src="/src/index.ts"></script>
   </head>
   <body>
-  <l-wallet></l-wallet>
-  <l-terminal></l-terminal>
+      <div id="gameview">
+          <l-wallet></l-wallet>
+          <l-terminal></l-terminal>
+          <div id="viewport"></div>
+      </div>
   </body>
 </html>
