Terminal/wallet repositioning

--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -8,9 +8,11 @@
   </head>
   <body>
       <div id="gameview">
-          <l-wallet></l-wallet>
-          <l-terminal></l-terminal>
-          <div id="viewport"></div>
+		<div id="ui_content">
+		  <l-wallet></l-wallet>
+		  <l-terminal id="terminal"></l-terminal>
+		</div>
+        <div id="viewport"></div>
       </div>
   </body>
 </html>
